refactor:alter index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>ola git e github no vscode</h1>
     <p>alterado no github</p>
+    <p>alterado no vscode</p>
     
 </body>
 </html>
